fp-library/tests/ui/new_send_not_sync.stderr
error[E0405]: cannot find trait `SendLiftFn` in this scope
  --> tests/ui/new_send_not_sync.rs:12:25
   |
12 |     let _ = <ArcFnBrand as SendLiftFn>::new(move |_: ()| {
   |                            ^^^^^^^^^^ not found in this scope
   |
help: consider importing this trait
   |
 1 + use fp_library::classes::SendLiftFn;
   |

warning: unused import: `classes::send_cloneable_fn::SendCloneableFn`
 --> tests/ui/new_send_not_sync.rs:4:3
  |
4 |         classes::send_cloneable_fn::SendCloneableFn,
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
